modificaciones para 4ta entrega

--- a/contacto.html
+++ b/contacto.html
@@ -10,11 +10,11 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>FG&CM ESTUDIO JURIDICO</title>
   </head>
   <body class="container-fluid">
     <header class="row">
-      <div class="col-lg-4">
+      <div class="col-lg-4 center-block text-center">
         <img class="header__logo" src="images/logo.jpg">
       </div>
       <div class="col-lg-7 offset-lg-1">
@@ -72,10 +72,10 @@
               <input class="contacto__input" type="surname" placeholder="Entrada de apellido" value="" required>
             </div>
             <div class="contacto__item"><label for="correo">Correo Electronico</label>
-              <input class="contacto__input--correo" type="email" placeholder="Ingrese su correo" value="" required>
+              <input class="contacto__input" type="email" placeholder="Ingrese su correo" value="" required>
             </div>
-            <div class="contacto__item"><label for="mensaje">Escribe tu consulta</label>
-              <textarea class="contacto__input--consulta" name="mensaje" cols="40" rows="4" minlength="5" maxlength="200" ></textarea>
+            <div class="contacto__item"><label class="consulta" for="mensaje">Escribe tu consulta</label>
+              <textarea class="contacto__input" name="mensaje" cols="40" rows="4" minlength="5" maxlength="200" ></textarea>
             </div>
             <input type="submit" value="Enviar Formulario" class="contacto__btn">
       </div><!--CIERRA FORMCONTACTO -->
