--- a/registrarse.html
+++ b/registrarse.html
@@ -14,7 +14,7 @@
   </head>
   <body class="container-fluid">
     <header class="row">
-      <div class="col-lg-4">
+      <div class="col-lg-4 center-block text-center">
         <img class="header__logo" src="images/logo.jpg">
       </div>
       <div class="col-lg-7 offset-lg-1">
@@ -62,7 +62,7 @@
     </header>
     <h3 class="registrarse__title">REGISTRARSE</h3>
       <div class="row">
-        <div class="offset-lg col-lg-6">
+        <div class="offset-lg col-lg-7">
           <div id="ui">
             <p class="registrarse__text">Al registrarte como cliente del estudio, vas a poder acceder a tu cuenta en todo momento, donde figuraran tus causas con su estado actualizado, y podras comunicarte y hacer consultas y videoconferencias a los profesionales</P>
               <form class="registrarse__form">
@@ -104,7 +104,7 @@
               </form>
           </div>
         </div>
-        <div class="col-lg-5 registrarse__image">
+        <div class="col-lg-4 registrarse__image">
           <div class="registrarse__overlay"></div>
         </div>
       </div>
