--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body class="container-fluid">
     <header class="row">
-      <div class="col-lg-4">
+      <div class="col-lg-4 center-block text-center">
         <img class="header__logo" src="images/logo.jpg">
       </div>
       <div class="col-lg-7 offset-lg-1">
@@ -187,20 +187,19 @@
         </div>
       </div>
     <footer class="row">
-            <div class="col-md-4 footer__item">
+            <div class="col-md-4 footer__item center-block text-center">
               <ul class="footer__item--links">
               <li><a href="contacto.html">Contacto</a></li>
               <li><a href="registrarse.html">Registrarse</a></li>
               <li><a href="#">Terminos y Condiciones</a></li>
               <li><a href="#">Politica de privacidad</a></li>
               </ul>
-      
             </div>
-            <div class="col-md-4 footer__item">
-              <p>Nuestra oficina</p>
+            <div class="col-md-4 footer__item center-block text-center">
+              <p>Conozca Nuestras oficinas en CABA</p>
               <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.183125026664!2d-58.38610508560926!3d-34.599530580460645!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccac7c2e1a54b%3A0x327c4296e870e09a!2sLibertad%20773%2C%20C1012AAO%20CABA!5e0!3m2!1sen!2sar!4v1621722815140!5m2!1sen!2sar" width="120" height="100" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </div>
-              <div class="col-md-4 footer__item"> 
+              <div class="col-md-4 footer__item center-block text-center"> 
               <p>Encontranos en las redes sociales</p>  
               <a href="#" class="fa fa-facebook"></a>
               <a href="#" class="fa fa-twitter"></a>
