--- a/profesionales.html
+++ b/profesionales.html
@@ -10,11 +10,11 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>FG&CM ESTUDIO JURIDICO</title>
   </head>
   <body class="container-fluid">
     <header class="row">
-      <div class="col-lg-4">
+      <div class="col-lg-4 center-block text-center">
         <img class="header__logo" src="images/logo.jpg">
       </div>
       <div class="col-lg-7 offset-lg-1">
