--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="El Estudio Juridico Integral FG&CM brinda atencion en las diversas ramas del derecho: civil, laboral, comercial y de familia. Profesionales especializados y servicio de calidad.">
+    <meta name="keywords" content="estudio juridico integral, estudio juridico,abogados, legales, leyes, derecho, consultas legales, problemas legales, juicios, mediaciones, servicios juridicos, asuntos juridicos, civil, laboral, comercial, sociedades, familia, contratos, sucesiones, divorcios">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-
     <title>FG&CM ESTUDIO JURIDICO</title>
   </head>
   <body class="container-fluid">
@@ -137,7 +136,6 @@
                     <h6>Derecho Laboral</h6>
                 </div>
                 <div class="col-md-2 practicas__item align-self-center">
-                    <img src="https://img.icons8.com/ios/50/000000/travel-agency.png" class="practicas__image"/>
                     <img src="https://img.icons8.com/carbon-copy/50/000000/banknotes.png"/>
                     <h6>Derecho del Turismo</h6>
                 </div>
