--- a/contacto.html
+++ b/contacto.html
@@ -4,12 +4,12 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content=" “Contacte al Estudio para comenzar a resolver sus cuestiones legales. Puede enviar su consulta por formulario o a traves de whatsapp o las redes sociales">
+    <meta name="keywords" content= "contacto, consulta juridica, consulta, abogados, whatsapp, facebook, redes sociales, problemas legales">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-
     <title>FG&CM ESTUDIO JURIDICO</title>
   </head>
   <body class="container-fluid">
