--- a/profesionales.html
+++ b/profesionales.html
@@ -4,13 +4,12 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="FG&CM cuenta con un equipo de abogados egresados de las mejores universidades del pais y especializados en las diversas ramas del derecho. Confiables y eficientes. Puede acceder a sus curriculums y redes sociales">
+    <meta name="keywords" content= "ABOGADOS, PROFESIONALES, CURRICULUM, UNIVERSIDADES, POSGRADOS, ESPECIALIZADOS, UBA, UCA, SAN ANDRES, CONFIANZA">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-
-    <title>FG&CM ESTUDIO JURIDICO</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">    <title>FG&CM ESTUDIO JURIDICO</title>
   </head>
   <body class="container-fluid">
     <header class="row">
