modifiaciones head SEO

--- a/profesionales.html
+++ b/profesionales.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="FG&CM cuenta con un equipo de abogados egresados de las mejores universidades del pais y especializados en las diversas ramas del derecho. Confiables y eficientes. Puede acceder a sus curriculums y redes sociales">
-    <meta name="keywords" content= "ABOGADOS, PROFESIONALES, CURRICULUM, UNIVERSIDADES, POSGRADOS, ESPECIALIZADOS, UBA, UCA, SAN ANDRES, CONFIANZA">
+    <meta name="keywords" content= "ABOGADOS, PROFESIONALES, CURRICULUM, UNIVERSIDADES, POSGRADOS, ESPECIALIZADOS, UBA, UCA, CONFIANZA">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Bootstrap CSS -->
