--- a/registrarse.html
+++ b/registrarse.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Al registrarse a nuestra pagina podra acceder a nuestros distintos servicios como una plataforma personalizada con sus juicios, o capacitaciones legales en caso de ser abogado">
-    <meta name="keywords" content= "registrarse, plataforma virtual, juicios, clientes, capacitaciones legales, cursos, servicios">
+    <meta name="keywords" content= "registrarse, plataforma virtual, juicios, clientes, capacitaciones legales, cursos, servicios legales">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
