correcciones de la 4ta entrega

--- a/index.html
+++ b/index.html
@@ -105,37 +105,37 @@
               <h3 class="practicas__title">Nuestras Areas de Practica</h3>
             </div>
             <div class="row d-flex justify-content-center">
-                <div class="col-md-2 practicas__item align-self-center">
+                <div class="col-md-2 col-6 practicas__item align-self-center">
                     <img src="https://img.icons8.com/carbon-copy/100/000000/auction.png" class="practicas__image"/>
                     <h6>Derecho Civil</h6>
                 </div>
-                <div class="col-md-2  practicas__item align-self-center">
+                <div class="col-md-2 col-6 practicas__item align-self-center">
                     <img src="https://img.icons8.com/carbon-copy/100/000000/rules.png" class="practicas__image"/>
                     <h6>Contratos</h6>
                 </div>
-                <div class="col-md-2 practicas__item align-self-center">
+                <div class="col-md-2 col-6 practicas__item align-self-center">
                     <img src="https://img.icons8.com/carbon-copy/100/000000/family.png" class="practicas__image"/>
                     <h6>Derecho de Familia</h6>
                 </div>
-                <div class="col-md-2 practicas__item align-self-center">
+                <div class="col-md-2 col-6 practicas__item align-self-center">
                     <img src="https://img.icons8.com/carbon-copy/100/000000/scales.png" class="practicas__image"/>
                     <h6>Derecho de Daños</h6>
                 </div>
             </div>
             <div class="row justify-content-center">
-                <div class="col-md-2 practicas__item align-self-center">
+                <div class="col-md-2 col-6 practicas__item align-self-center">
                     <img src="https://img.icons8.com/carbon-copy/100/000000/scales.png" class="practicas__image"/>
                     <h6>Derecho de Daños</h6>
                 </div>
-                <div class="col-md-2 practicas__item align-self-center">
+                <div class="col-md-2 col-6 practicas__item align-self-center">
                     <img src="https://img.icons8.com/carbon-copy/100/000000/scales.png" class="practicas__image"/>
                     <h6>Derecho de Daños</h6>
                 </div>
-                <div class="col-md-2 practicas__item align-self-center">
+                <div class="col-md-2 col-6 practicas__item align-self-center">
                     <img src="https://img.icons8.com/wired/64/000000/worker-male.png" class="practicas__image"/>
                     <h6>Derecho Laboral</h6>
                 </div>
-                <div class="col-md-2 practicas__item align-self-center">
+                <div class="col-md-2 col-6 practicas__item align-self-center">
                     <img src="https://img.icons8.com/carbon-copy/50/000000/banknotes.png"/>
                     <h6>Derecho del Turismo</h6>
                 </div>
