--- a/registrarse.html
+++ b/registrarse.html
@@ -86,7 +86,7 @@
                       <input type="password" name="password" class="form-control" placeholder="Ingresa tu contraseña">
                   </div>
                   <div class="col-lg-6">
-                      <label>Reescriba su contrasena:</label>
+                      <label>Reescriba:</label>
                       <input type="password" name="retype" class="form-control" placeholder="Ingresa contraseña nuevamente">
                   </div>
                 </div>
