--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             </div>
             <div class="carousel-item">
                 <div class="carousel__overlay3"></div>
-                <div class="carousel-caption d-none d-md-block">
+                <div class="carousel-caption d-none d-block">
                 <h5>Eficiencia y Rapidez</h5>
                 <p>Some representative placeholder content for the third slide.</p>
                 </div>
@@ -195,7 +195,7 @@
             </div>
             <div class="col-md-4 footer__item center-block text-center">
               <p>Conozca Nuestras oficinas en CABA</p>
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.183125026664!2d-58.38610508560926!3d-34.599530580460645!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccac7c2e1a54b%3A0x327c4296e870e09a!2sLibertad%20773%2C%20C1012AAO%20CABA!5e0!3m2!1sen!2sar!4v1621722815140!5m2!1sen!2sar" width="120" height="100" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.183125026664!2d-58.38610508560926!3d-34.599530580460645!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccac7c2e1a54b%3A0x327c4296e870e09a!2sLibertad%20773%2C%20C1012AAO%20CABA!5e0!3m2!1sen!2sar!4v1621722815140!5m2!1sen!2sar" width="120" height="100" style="border:0;" allowfullscreen="" loading="lazy" class="map"></iframe>
             </div>
               <div class="col-md-4 footer__item center-block text-center"> 
               <p>Encontranos en las redes sociales</p>  
