--- a/index.html
+++ b/index.html
@@ -69,21 +69,21 @@
             <div class="carousel-inner">
             <div class="carousel-item active">
                 <div class="carousel__overlay"></div>
-                <div class="carousel-caption d-none d-md-block">
+                <div class="carousel-caption">
                 <h1>LA SOLUCION DE TUS PROBLEMAS LEGALES, NUESTRA PRIORIDAD</h1>
                 <p>Some representative placeholder content for the first slide.</p>
                 </div>
             </div>
             <div class="carousel-item">
                 <div class="carousel__overlay2"></div>
-                <div class="carousel-caption d-none d-md-block">
+                <div class="carousel-caption ">
                 <h5>Atencion personalizada</h5>
                 <p>Nos caracterizamos por mantener constante contacto con nuestros clientes y estar a disposicion para cualquier necesidad que tuvieran.</p>
                 </div>
             </div>
             <div class="carousel-item">
                 <div class="carousel__overlay3"></div>
-                <div class="carousel-caption d-none d-block">
+                <div class="carousel-caption-bloc">
                 <h5>Eficiencia y Rapidez</h5>
                 <p>Some representative placeholder content for the third slide.</p>
                 </div>
