--- a/index.html
+++ b/index.html
@@ -71,8 +71,7 @@
                 <div class="carousel__overlay"></div>
                 <div class="carousel-caption">
                 <h1>LA SOLUCION DE TUS PROBLEMAS LEGALES, NUESTRA PRIORIDAD</h1>
-                <p>Some representative placeholder content for the first slide.</p>
-                </div>
+               </div>
             </div>
             <div class="carousel-item">
                 <div class="carousel__overlay2"></div>
@@ -83,9 +82,9 @@
             </div>
             <div class="carousel-item">
                 <div class="carousel__overlay3"></div>
-                <div class="carousel-caption-bloc">
+                <div class="carousel-caption">
                 <h5>Eficiencia y Rapidez</h5>
-                <p>Some representative placeholder content for the third slide.</p>
+                <p>Para nosotros, lo mas importante es el tiempo de nuestros clientes. Nos comprometemos a trabajar diligentemente para que los casos puedan tener una resolucion rapida y favorable</p>
                 </div>
             </div>
             </div>
