--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
             <div class="carousel-item active">
                 <div class="carousel__overlay"></div>
                 <div class="carousel-caption">
-                <h1>LA SOLUCION DE TUS PROBLEMAS LEGALES, NUESTRA PRIORIDAD</h1>
+                <p class="carousel__text">LA SOLUCION DE TUS PROBLEMAS LEGALES, </p>
+                <p class="carousel__text--prioridad"> NUESTRA PRIORIDAD</p>
                </div>
             </div>
             <div class="carousel-item">
