--- a/index.html
+++ b/index.html
@@ -77,14 +77,14 @@
             <div class="carousel-item">
                 <div class="carousel__overlay2"></div>
                 <div class="carousel-caption ">
-                <p class="carousel__text--prioridad">Atencion personalizada</p>
+                <h5>Atencion personalizada</h5>
                 <p>Nos caracterizamos por mantener constante contacto con nuestros clientes y estar a disposicion para cualquier necesidad que tuvieran.</p>
                 </div>
             </div>
             <div class="carousel-item">
                 <div class="carousel__overlay3"></div>
                 <div class="carousel-caption">
-                <p class="carousel__text--prioridad">Eficiencia y Rapidez</p>
+                <h5>Eficiencia y Rapidez</h5>
                 <p>Para nosotros, lo mas importante es el tiempo de nuestros clientes. Nos comprometemos a trabajar diligentemente para que los casos puedan tener una resolucion rapida y favorable</p>
                 </div>
             </div>
