--- a/index.html
+++ b/index.html
@@ -152,9 +152,9 @@
             <div class="row">
                 <div class="col-lg-5 aboutUs__foto"><div class="aboutUs__overlay"></div></div>
                 <div class="col-lg-7">
-                    <div class="aboutUs__text">
-                        <h3>Sobre Nosotros</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et quo nobis minus vitae, molestiae perferendis quisquam illum atque similique nemo quae ut quidem animi alias molestias saepe numquam repudiandae. Laborum.</p>
+                    <div class="aboutUs__textarea">
+                      <h3>Sobre Nosotros</h3>
+                      <p class="aboutUs__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et quo nobis minus vitae, molestiae perferendis quisquam illum atque similique nemo quae ut quidem animi alias molestias saepe numquam repudiandae. Laborum.</p>
                     </div>
                 </div>
             </div>
