agregar alt y section

--- a/areasdepractica.html
+++ b/areasdepractica.html
@@ -15,7 +15,7 @@
   <body class="container-fluid">
     <header class="row">
       <div class="col-lg-4 center-block text-center">
-        <img class="header__logo" src="images/logo.jpg">
+        <img class="header__logo" src="images/logo.jpg" alt="Logo del Estudio">
       </div>
       <div class="col-lg-7 offset-lg-1">
         <div class="container-fluid">
@@ -67,39 +67,39 @@
             </div>
             <div class="row d-flex justify-content-center">
                 <div class="col-lg-2 practicas__box align-self-center">
-                    <img src="https://img.icons8.com/carbon-copy/100/000000/auction.png" class="practicas__image"/>
+                    <img src="https://img.icons8.com/carbon-copy/100/000000/auction.png" class="practicas__image" alt="Logo de Civil"/>
                     <h6>Derecho Civil</h6>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta voluptas veniam iste enim blanditiis, dignissimos earum, ad quos quo, dolorum exercitationem atque eveniet quidem placeat sequi dolor aspernatur impedit optio?</p>
                 </div>
                 <div class="col-lg-2  practicas__box align-self-center">
-                    <img src="https://img.icons8.com/carbon-copy/100/000000/rules.png" class="practicas__image"/>
+                    <img src="https://img.icons8.com/carbon-copy/100/000000/rules.png" class="practicas__image" alt="Logo de Contratos"/>
                     <h6>Contratos</h6>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta voluptas veniam iste enim blanditiis, dignissimos earum, ad quos quo, dolorum exercitationem atque eveniet quidem placeat sequi dolor aspernatur impedit optio?</p>
                 </div>
                 <div class="col-lg-2 practicas__box align-self-center">
-                    <img src="https://img.icons8.com/carbon-copy/100/000000/family.png" class="practicas__image"/>
+                    <img src="https://img.icons8.com/carbon-copy/100/000000/family.png" class="practicas__image" alt="Logo de Familia"/>
                     <h6>Derecho de Familia</h6>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta voluptas veniam iste enim blanditiis, dignissimos earum, ad quos quo, dolorum exercitationem atque eveniet quidem placeat sequi dolor aspernatur impedit optio?</p>
                 </div>
                 <div class="col-lg-2 practicas__box align-self-center">
-                    <img src="https://img.icons8.com/carbon-copy/100/000000/scales.png" class="practicas__image"/>
+                    <img src="https://img.icons8.com/carbon-copy/100/000000/scales.png" class="practicas__image" alt="Logo de Daños"/>
                     <h6>Derecho de Daños</h6>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta voluptas veniam iste enim blanditiis, dignissimos earum, ad quos quo, dolorum exercitationem atque eveniet quidem placeat sequi dolor aspernatur impedit optio?</p>
                 </div>
             </div>
             <div class="row justify-content-center">
                 <div class="col-lg-2 practicas__box align-self-center">
-                    <img src="https://img.icons8.com/carbon-copy/100/000000/scales.png" class="practicas__image"/>
+                    <img src="https://img.icons8.com/carbon-copy/100/000000/scales.png" class="practicas__image" alt="Logo de Daños"/>
                     <h6>Derecho de Daños</h6>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta voluptas veniam iste enim blanditiis, dignissimos earum, ad quos quo, dolorum exercitationem atque eveniet quidem placeat sequi dolor aspernatur impedit optio?</p>
                 </div>
                 <div class="col-lg-2 practicas__box align-self-center">
-                    <img src="https://img.icons8.com/carbon-copy/100/000000/scales.png" class="practicas__image"/>
+                    <img src="https://img.icons8.com/carbon-copy/100/000000/scales.png" class="practicas__image" alt="Logo de Daños"/>
                     <h6>Derecho de Daños</h6>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta voluptas veniam iste enim blanditiis, dignissimos earum, ad quos quo, dolorum exercitationem atque eveniet quidem placeat sequi dolor aspernatur impedit optio?</p>
                 </div>
                 <div class="col-lg-2 practicas__box align-self-center">
-                    <img src="https://img.icons8.com/wired/64/000000/worker-male.png" class="practicas__image"/>
+                    <img src="https://img.icons8.com/wired/64/000000/worker-male.png" class="practicas__image" alt="Logo de Laboral"/>
                     <h6>Derecho Laboral</h6>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta voluptas veniam iste enim blanditiis, dignissimos earum, ad quos quo, dolorum exercitationem atque eveniet quidem placeat sequi dolor aspernatur impedit optio?</p>
                 </div>
