--- a/contacto.html
+++ b/contacto.html
@@ -15,7 +15,7 @@
   <body class="container-fluid">
     <header class="row">
       <div class="col-lg-4 center-block text-center">
-        <img class="header__logo" src="images/logo.jpg">
+        <img class="header__logo" src="images/logo.jpg" alt="Logo del Estudio">
       </div>
       <div class="col-lg-7 offset-lg-1">
         <div class="container-fluid">
@@ -60,7 +60,7 @@
         </div>
       </div>
     </header>
-    <div class="row">
+    <section class="row">
       <div class="col-lg-6">
         <div class="contacto__form">
           <p class="contacto__formtitle">Escribinos tu consulta y te responderemos en el lapso de 72hs</p>
@@ -98,7 +98,7 @@
           <p class="contacto__redes--text">ESTUDIOFGCM@GMAIL.COM</p></li>
         </div>                  
       </div>
-    </div>  
+    </section>  
     <footer class="row">
       <div class="col-md-4 footer__item">
         <ul class="footer__item--links">
