--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body class="container-fluid">
     <header class="row">
       <div class="col-lg-4 center-block text-center">
-        <img class="header__logo" src="images/logo.jpg">
+        <img class="header__logo" src="images/logo.jpg" alt="Logo del Estudio">
       </div>
       <div class="col-lg-7 offset-lg-1">
         <div class="container-fluid">
@@ -59,7 +59,7 @@
         </div>
       </div>
     </header>
-    <div class="row">
+    <section class="row">
         <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -70,7 +70,7 @@
             <div class="carousel-item active">
                 <div class="carousel__overlay"></div>
                 <div class="carousel-caption">
-                <p class="carousel__text">LA SOLUCION DE TUS PROBLEMAS LEGALES, </p>
+                <p class="carousel__text--title">LA SOLUCION DE TUS PROBLEMAS LEGALES, </p>
                 <p class="carousel__text--prioridad"> NUESTRA PRIORIDAD</p>
                </div>
             </div>
@@ -78,14 +78,14 @@
                 <div class="carousel__overlay2"></div>
                 <div class="carousel-caption ">
                 <h5>Atencion personalizada</h5>
-                <p>Nos caracterizamos por mantener constante contacto con nuestros clientes y estar a disposicion para cualquier necesidad que tuvieran.</p>
+                <p class="carousel__text">Nos caracterizamos por mantener constante contacto con nuestros clientes y estar a disposicion para cualquier necesidad que tuvieran.</p>
                 </div>
             </div>
             <div class="carousel-item">
                 <div class="carousel__overlay3"></div>
                 <div class="carousel-caption">
                 <h5>Eficiencia y Rapidez</h5>
-                <p>Para nosotros, lo mas importante es el tiempo de nuestros clientes. Nos comprometemos a trabajar diligentemente para que los casos puedan tener una resolucion rapida y favorable</p>
+                <p class="carousel__text">Para nosotros, lo mas importante es el tiempo de nuestros clientes. Nos comprometemos a trabajar diligentemente para que los casos puedan tener una resolucion rapida y favorable</p>
                 </div>
             </div>
             </div>
@@ -98,23 +98,23 @@
             <span class="visually-hidden">Next</span>
             </button>
         </div>
-    </div>
-    <div class="row">
+    </section>
+    <section class="row">
         <div class="container-fluid practicas ">
             <div class="row">
               <h3 class="practicas__title">Nuestras Areas de Practica</h3>
             </div>
             <div class="row d-flex justify-content-center">
                 <div class="col-md-2 col-6 practicas__item align-self-center">
-                    <img src="https://img.icons8.com/carbon-copy/100/000000/auction.png" class="practicas__image"/>
+                    <img src="https://img.icons8.com/carbon-copy/100/000000/auction.png" class="practicas__image" alt="Logo de Civil"/>
                     <h6>Derecho Civil</h6>
                 </div>
                 <div class="col-md-2 col-6 practicas__item align-self-center">
-                    <img src="https://img.icons8.com/carbon-copy/100/000000/rules.png" class="practicas__image"/>
+                    <img src="https://img.icons8.com/carbon-copy/100/000000/rules.png" class="practicas__image" alt="Logo de Contratos"/>
                     <h6>Contratos</h6>
                 </div>
                 <div class="col-md-2 col-6 practicas__item align-self-center">
-                    <img src="https://img.icons8.com/carbon-copy/100/000000/family.png" class="practicas__image"/>
+                    <img src="https://img.icons8.com/carbon-copy/100/000000/family.png" class="practicas__image" alt="Logo de Familia"/>
                     <h6>Derecho de Familia</h6>
                 </div>
                 <div class="col-md-2 col-6 practicas__item align-self-center">
@@ -124,19 +124,19 @@
             </div>
             <div class="row justify-content-center">
                 <div class="col-md-2 col-6 practicas__item align-self-center">
-                    <img src="https://img.icons8.com/carbon-copy/100/000000/scales.png" class="practicas__image"/>
+                    <img src="https://img.icons8.com/carbon-copy/100/000000/scales.png" class="practicas__image"alt="Logo de Daños"/>
                     <h6>Derecho de Daños</h6>
                 </div>
                 <div class="col-md-2 col-6 practicas__item align-self-center">
-                    <img src="https://img.icons8.com/carbon-copy/100/000000/scales.png" class="practicas__image"/>
+                    <img src="https://img.icons8.com/carbon-copy/100/000000/scales.png" alt="Logo de Daños" class="practicas__image"/>
                     <h6>Derecho de Daños</h6>
                 </div>
                 <div class="col-md-2 col-6 practicas__item align-self-center">
-                    <img src="https://img.icons8.com/wired/64/000000/worker-male.png" class="practicas__image"/>
+                    <img src="https://img.icons8.com/wired/64/000000/worker-male.png" alt="Logo de Laboral" class="practicas__image"/>
                     <h6>Derecho Laboral</h6>
                 </div>
                 <div class="col-md-2 col-6 practicas__item align-self-center">
-                    <img src="https://img.icons8.com/carbon-copy/50/000000/banknotes.png"/>
+                    <img src="https://img.icons8.com/carbon-copy/50/000000/banknotes.png" alt="Logo de Turismo"/>
                     <h6>Derecho del Turismo</h6>
                 </div>
             </div>
@@ -146,8 +146,8 @@
               </div>
             </div>
         </div>
-    </div>
-    <div class="row aboutUs">
+    </section>
+    <section class="row aboutUs">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-5 aboutUs__foto"><div class="aboutUs__overlay"></div></div>
@@ -159,8 +159,8 @@
                 </div>
             </div>
         </div>
-    </div>
-    <div class="row numbers">
+    </section>
+    <section class="row numbers">
         <div class="container-fluid">
             <div class="row">
                 <div class="col">
@@ -183,7 +183,7 @@
                 </div>
               </div>
         </div>
-      </div>
+    </section>
     <footer class="row">
             <div class="col-md-4 footer__item center-block text-center">
               <ul class="footer__item--links">
