--- a/profesionales.html
+++ b/profesionales.html
@@ -14,7 +14,7 @@
   <body class="container-fluid">
     <header class="row">
       <div class="col-lg-4 center-block text-center">
-        <img class="header__logo" src="images/logo.jpg">
+        <img class="header__logo" src="images/logo.jpg" alt="Logo del Estudio">
       </div>
       <div class="col-lg-7 offset-lg-1">
         <div class="container-fluid">
@@ -59,14 +59,14 @@
         </div>
       </div>
     </header>
-    <div class="row">
+    <section class="row">
       <div class="container-fluid profesionales ">
         <div class="row d-flex justify-content-center">
           <h3 class="profesionales__title">Nuestros Profesionales</h3>
         </div>
         <div class="row d-flex justify-content-center">
           <div class="col-lg-2 offset-lg-1 align-self-center">
-            <img src="images/mujer1.jpg" class="profesionales__image"/>
+            <img src="images/mujer1.jpg" class="profesionales__image" alt="Imagen de Maria Perez"/>
           </div>
           <div class="col-lg-5 profesionales__box align-self-center">
             <h6>Maria Perez</h6>
@@ -79,7 +79,7 @@
         </div>    
         <div class="row d-flex justify-content-center">
           <div class="col-lg-2 offset-lg-1 align-self-center">
-            <img src="images/hombre.jpg" class="profesionales__image"/>
+            <img src="images/hombre.jpg" class="profesionales__image" alt="Imagen de Juan Gonzalez"/>
           </div>
           <div class="col-lg-5 profesionales__box align-self-center">
             <h6>Juan Gonzalez</h6>
@@ -92,7 +92,7 @@
         </div> 
         <div class="row d-flex justify-content-center">
           <div class="col-lg-2 offset-lg-1 align-self-center">
-            <img src="images/mujer2.jpg" class="profesionales__image"/>                
+            <img src="images/mujer2.jpg" class="profesionales__image" alt="Imagen de Marcela Gomez"/>                
           </div>
           <div class="col-lg-5 profesionales__box align-self-center">
             <h6>Marcela Gomez</h6>
@@ -104,7 +104,7 @@
           </div>
         </div>       
       </div>
-    </div>
+    </section>
     <footer class="row">
       <div class="col-md-4 footer__item">
         <ul class="footer__item--links">
