--- a/registrarse.html
+++ b/registrarse.html
@@ -17,7 +17,7 @@
   <body class="container-fluid">
     <header class="row">
       <div class="col-lg-4 center-block text-center">
-        <img class="header__logo" src="images/logo.jpg">
+        <img class="header__logo" src="images/logo.jpg" alt="Logo del Estudio">
       </div>
       <div class="col-lg-7 offset-lg-1">
         <div class="container-fluid">
@@ -63,7 +63,7 @@
       </div>
     </header>
     <h3 class="registrarse__title">REGISTRARSE</h3>
-      <div class="row">
+      <section class="row">
         <div class="offset-lg col-lg-7">
           <div id="ui">
             <p class="registrarse__text">Al registrarte como cliente del estudio, vas a poder acceder a tu cuenta en todo momento, donde figuraran tus causas con su estado actualizado, y podras comunicarte y hacer consultas y videoconferencias a los profesionales</P>
@@ -109,7 +109,7 @@
         <div class="col-lg-4 registrarse__image">
           <div class="registrarse__overlay"></div>
         </div>
-      </div>
+      </section>
       <footer class="row">
         <div class="col-md-4 footer__item">
           <ul class="footer__item--links">
