--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="El Estudio Juridico Integral FG&CM brinda atencion en las diversas ramas del derecho: civil, laboral, comercial y de familia. Profesionales especializados y servicio de calidad.">
     <meta name="keywords" content="estudio juridico integral, estudio juridico, abogados, legales, leyes, derecho, consultas legales, problemas legales, juicios, mediaciones, servicios juridicos, asuntos juridicos, civil, laboral, comercial, sociedades, familia, contratos, sucesiones, divorcios">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
@@ -100,17 +101,17 @@
         </div>
     </section>
     <section class="row">
-        <div class="container-fluid practicas ">
+        <div class="container-fluid practicas"  data-aos="fade-right">
             <div class="row">
               <h3 class="practicas__title">Nuestras Areas de Practica</h3>
             </div>
             <div class="row d-flex justify-content-center">
-                <div class="col-md-2 col-6 practicas__item align-self-center">
+                <div class="col-md-2 col-6 practicas__item align-self-center" >
                     <img src="https://img.icons8.com/carbon-copy/100/000000/auction.png" class="practicas__image" alt="Logo de Civil"/>
                     <h6>Derecho Civil</h6>
                 </div>
                 <div class="col-md-2 col-6 practicas__item align-self-center">
-                    <img src="https://img.icons8.com/carbon-copy/100/000000/rules.png" class="practicas__image" alt="Logo de Contratos"/>
+                    <img src="https://img.icons8.com/carbon-copy/100/000000/rules.png"  class="practicas__image" alt="Logo de Contratos"/>
                     <h6>Contratos</h6>
                 </div>
                 <div class="col-md-2 col-6 practicas__item align-self-center">
@@ -118,7 +119,7 @@
                     <h6>Derecho de Familia</h6>
                 </div>
                 <div class="col-md-2 col-6 practicas__item align-self-center">
-                    <img src="https://img.icons8.com/carbon-copy/100/000000/scales.png" class="practicas__image"/>
+                    <img src="https://img.icons8.com/carbon-copy/100/000000/scales.png" class="practicas__image" alt="Logo de Daños"/>
                     <h6>Derecho de Daños</h6>
                 </div>
             </div>
@@ -127,7 +128,7 @@
                     <img src="https://img.icons8.com/carbon-copy/100/000000/scales.png" class="practicas__image"alt="Logo de Daños"/>
                     <h6>Derecho de Daños</h6>
                 </div>
-                <div class="col-md-2 col-6 practicas__item align-self-center">
+                <div class="col-md-2 col-6 practicas__item align-self-center" >
                     <img src="https://img.icons8.com/carbon-copy/100/000000/scales.png" alt="Logo de Daños" class="practicas__image"/>
                     <h6>Derecho de Daños</h6>
                 </div>
@@ -136,7 +137,7 @@
                     <h6>Derecho Laboral</h6>
                 </div>
                 <div class="col-md-2 col-6 practicas__item align-self-center">
-                    <img src="https://img.icons8.com/carbon-copy/50/000000/banknotes.png" alt="Logo de Turismo"/>
+                    <img src="https://img.icons8.com/carbon-copy/50/000000/banknotes.png"  alt="Logo de Turismo"/>
                     <h6>Derecho del Turismo</h6>
                 </div>
             </div>
@@ -148,7 +149,7 @@
         </div>
     </section>
     <section class="row aboutUs">
-        <div class="container-fluid">
+        <div class="container-fluid" data-aos="fade-left">
             <div class="row">
                 <div class="col-lg-5 aboutUs__foto"><div class="aboutUs__overlay"></div></div>
                 <div class="col-lg-7">
@@ -164,19 +165,19 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col">
-                  <div class="numbers__item">
+                  <div class="numbers__item" data-aos="fade-right">
                     <h6 class="numbers__title">Clientes</h6>
                     <p class="numbers__text">167</p>
                   </div>
                 </div>
                 <div class="col">
-                  <div class="numbers__item">
+                  <div class="numbers__item" data-aos="fade-right">
                     <h6 class="numbers__title">Mediaciones con acuerdo</h6>
                     <p class="numbers__text">90%</p>
                   </div>
                 </div>
                 <div class="col">
-                  <div class="numbers__item">
+                  <div class="numbers__item" data-aos="fade-right">
                     <h6 class="numbers__title">Sentencias Favorables</h6>
                     <p class="numbers__text">95%</p>
                   </div>
@@ -184,7 +185,7 @@
               </div>
         </div>
     </section>
-    <footer class="row">
+    <footer class="row" data-aos="fade-right">
             <div class="col-md-4 footer__item center-block text-center">
               <ul class="footer__item--links">
               <li><a href="contacto.html">Contacto</a></li>
@@ -218,5 +219,12 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
     -->
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script>
+    AOS.init({
+      offset:200,
+      duration:600
+    });
+  </script>
   </body>
 </html>
