cambio boton wpp

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
               </div>
             </nav>
           </div>
-          <div class="row">
+          <div class="header__consulta">
             <button type="button" class="header__btn col-lg-5 offset-lg-4"> Haga su consulta hoy <a href="#" class="fa fa-whatsapp"></a></button>
           </div>
         </div>
