--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </nav>
           </div>
           <div class="header__consulta">
-            <button type="button" class="header__btn col-lg-5 offset-lg-4"> Haga su consulta hoy <a href="#" class="fa fa-whatsapp"></a></button>
+            <button type="button" class="header__btn col-lg-5 offset-lg-4"> Consultenos ahora <a href="#" class="fa fa-whatsapp"></a></button>
           </div>
         </div>
       </div>
