--- a/profesionales.html
+++ b/profesionales.html
@@ -7,6 +7,7 @@
     <meta name="description" content="FG&CM cuenta con un equipo de abogados egresados de las mejores universidades del pais y especializados en las diversas ramas del derecho. Confiables y eficientes. Puede acceder a sus curriculums y redes sociales">
     <meta name="keywords" content= "ABOGADOS, PROFESIONALES, CURRICULUM, UNIVERSIDADES, POSGRADOS, ESPECIALIZADOS, UBA, UCA, CONFIANZA">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">    <title>FG&CM ESTUDIO JURIDICO</title>
@@ -65,7 +66,7 @@
           <h3 class="profesionales__title">Nuestros Profesionales</h3>
         </div>
         <div class="row d-flex justify-content-center">
-          <div class="col-lg-2 offset-lg-1 align-self-center">
+          <div class="col-lg-2 offset-lg-1 align-self-center" data-aos="fade-right">
             <img src="images/mujer1.jpg" class="profesionales__image" alt="Imagen de Maria Perez"/>
           </div>
           <div class="col-lg-5 profesionales__box align-self-center">
@@ -78,7 +79,7 @@
           </div>
         </div>    
         <div class="row d-flex justify-content-center">
-          <div class="col-lg-2 offset-lg-1 align-self-center">
+          <div class="col-lg-2 offset-lg-1 align-self-center" data-aos="fade-right">
             <img src="images/hombre.jpg" class="profesionales__image" alt="Imagen de Juan Gonzalez"/>
           </div>
           <div class="col-lg-5 profesionales__box align-self-center">
@@ -90,7 +91,7 @@
             </div>
           </div>
         </div> 
-        <div class="row d-flex justify-content-center">
+        <div class="row d-flex justify-content-center" data-aos="fade-right">
           <div class="col-lg-2 offset-lg-1 align-self-center">
             <img src="images/mujer2.jpg" class="profesionales__image" alt="Imagen de Marcela Gomez"/>                
           </div>
@@ -137,5 +138,12 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
     -->
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+    AOS.init({
+      offset:200,
+      duration:600
+    });
+    </script>
   </body>
 </html>
