--- a/profesionales.html
+++ b/profesionales.html
@@ -15,11 +15,11 @@
   <body class="container-fluid">
     <header class="row">
       <div class="col-lg-4 center-block text-center">
-        <img class="header__logo" src="images/logo.jpg" alt="Logo del Estudio">
+        <img class="logo" src="images/logo.jpg" alt="Logo del Estudio">
       </div>
       <div class="col-lg-7 offset-lg-1">
-        <div class="container-fluid">
-          <div class="row navegacion">
+        <div class="container-fluid menu">
+          <div class="row menu__navegacion">
             <nav class="navbar navbar-expand-lg navbar-light">
               <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -28,13 +28,13 @@
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                   <ul class="navbar-nav">
                     <li class="nav-item ">
-                      <a class="nav-link" aria-current="page" href="index.html">Home</a>
+                      <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="areasdepractica.html">Areas de Practica</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link active" href="profesionales.html">Profesionales</a>
+                      <a class="nav-link" href="profesionales.html">Profesionales</a>
                     </li>
                     <li class="nav-item dropdown">
                       <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -54,18 +54,16 @@
               </div>
             </nav>
           </div>
-          <div class="row">
-            <button type="button" class="header__btn col-lg-5 offset-lg-4"> Haga su consulta hoy <a href="#" class="fa fa-whatsapp"></a></button>
+          <div class="menu__consulta">
+            <button type="button" class="menu__btn col-lg-5 offset-lg-4"> Consultenos ahora <a href="#" class="fa fa-whatsapp"></a></button>
           </div>
         </div>
       </div>
     </header>
     <section class="row">
-      <div class="container-fluid profesionales ">
+      <div class="container-fluid profesionales">
         <div class="row d-flex justify-content-center">
-          <h3 class="profesionales__title">Nuestros Profesionales</h3>
-        </div>
-        <div class="row d-flex justify-content-center">
+          <h1 class="profesionales__title">Nuestros Profesionales</h1>
           <div class="col-lg-2 offset-lg-1 align-self-center" data-aos="fade-right">
             <img src="images/mujer1.jpg" class="profesionales__image" alt="Imagen de Maria Perez"/>
           </div>
@@ -106,8 +104,8 @@
         </div>       
       </div>
     </section>
-    <footer class="row">
-      <div class="col-md-4 footer__item">
+    <footer class="row" data-aos="fade-right">
+      <div class="col-md-4 footer__item center-block text-center">
         <ul class="footer__item--links">
           <li><a href="contacto.html">Contacto</a></li>
           <li><a href="registrarse.html">Registrarse</a></li>
@@ -115,19 +113,21 @@
           <li><a href="#">Politica de privacidad</a></li>
         </ul>
       </div>
-      <div class="col-md-4 footer__item">
-        <p>Nuestra oficina</p>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.183125026664!2d-58.38610508560926!3d-34.599530580460645!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccac7c2e1a54b%3A0x327c4296e870e09a!2sLibertad%20773%2C%20C1012AAO%20CABA!5e0!3m2!1sen!2sar!4v1621722815140!5m2!1sen!2sar" width="120" height="100" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+      <div class="col-md-4 footer__item center-block text-center">
+        <h7> <a href="#" class="fa fa-map-marker"></a>  Direccion</h7>
+        <p>Libertad 457, 6to piso, Ciudad Autonoma de Buenos Aires, Argentina. CP 1014.</p>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.183125026664!2d-58.38610508560926!3d-34.599530580460645!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccac7c2e1a54b%3A0x327c4296e870e09a!2sLibertad%20773%2C%20C1012AAO%20CABA!5e0!3m2!1sen!2sar!4v1621722815140!5m2!1sen!2sar" width="120" height="100" style="border:0;" allowfullscreen="" loading="lazy" class="map"></iframe>
       </div>
-      <div class="col-md-4 footer__item"> 
+      <div class="col-md-4 footer__item center-block text-center"> 
+        <p><a href="#" class="fa fa-phone"></a>  11-4435-6757</p>
+        <p><a href="#" class="fa fa-envelope"></a>  estudiofgcm@gmail.com</p>
         <p>Encontranos en las redes sociales</p>  
         <a href="#" class="fa fa-facebook"></a>
         <a href="#" class="fa fa-twitter"></a>
         <a href="#" class="fa fa-instagram"></a>
-         <a href="#" class="fa fa-linkedin"></a>
-      </div>       
+        <a href="#" class="fa fa-linkedin"></a>
+      </div>                
     </footer>
-      
     <p class="rights">© 2021 FG&CM. Todos los derechos reservados. Prohibida su reproducción total o parcial.</p>
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
