--- a/registrarse.html
+++ b/registrarse.html
@@ -17,11 +17,11 @@
   <body class="container-fluid">
     <header class="row">
       <div class="col-lg-4 center-block text-center">
-        <img class="header__logo" src="images/logo.jpg" alt="Logo del Estudio">
+        <img class="logo" src="images/logo.jpg" alt="Logo del Estudio">
       </div>
       <div class="col-lg-7 offset-lg-1">
-        <div class="container-fluid">
-          <div class="row navegacion">
+        <div class="container-fluid menu">
+          <div class="row menu__navegacion">
             <nav class="navbar navbar-expand-lg navbar-light">
               <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -29,8 +29,8 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                   <ul class="navbar-nav">
-                    <li class="nav-item">
-                      <a class="nav-link" aria-current="page" href="index.html">Home</a>
+                    <li class="nav-item ">
+                      <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="areasdepractica.html">Areas de Practica</a>
@@ -56,13 +56,13 @@
               </div>
             </nav>
           </div>
-          <div class="row">
-            <button type="button" class="header__btn col-lg-5 offset-lg-4"> Haga su consulta hoy <a href="#" class="fa fa-whatsapp"></a></button>
+          <div class="menu__consulta">
+            <button type="button" class="menu__btn col-lg-5 offset-lg-4"> Consultenos ahora <a href="#" class="fa fa-whatsapp"></a></button>
           </div>
         </div>
       </div>
     </header>
-    <h3 class="registrarse__title">REGISTRARSE</h3>
+    <h1 class="registrarse__title">REGISTRARSE</h1>
       <section class="row">
         <div class="offset-lg col-lg-7">
           <div id="ui">
@@ -78,8 +78,8 @@
                     <input type=text name="lastname" class="form-control" placeholder="Ingresa tu apellido">
                   </div>
                 </div>
-                <label>E-mail</label>
-                <input type="text" name="email" class="form-control" placeholder="Ingresa tu Email">
+                    <label>E-mail</label>
+                    <input type="text" name="email" class="form-control" placeholder="Ingresa tu Email">
                 <div class="row">
                   <div class="col-lg-6">
                       <label>Contraseña:</label>
@@ -110,8 +110,8 @@
           <div class="registrarse__overlay"></div>
         </div>
       </section>
-      <footer class="row">
-        <div class="col-md-4 footer__item">
+      <footer class="row" data-aos="fade-right">
+        <div class="col-md-4 footer__item center-block text-center">
           <ul class="footer__item--links">
             <li><a href="contacto.html">Contacto</a></li>
             <li><a href="registrarse.html">Registrarse</a></li>
@@ -119,27 +119,24 @@
             <li><a href="#">Politica de privacidad</a></li>
           </ul>
         </div>
-        <div class="col-md-4 footer__item">
-          <p>Nuestra oficina</p>
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.183125026664!2d-58.38610508560926!3d-34.599530580460645!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccac7c2e1a54b%3A0x327c4296e870e09a!2sLibertad%20773%2C%20C1012AAO%20CABA!5e0!3m2!1sen!2sar!4v1621722815140!5m2!1sen!2sar" width="120" height="100" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        <div class="col-md-4 footer__item center-block text-center">
+          <h7> <a href="#" class="fa fa-map-marker"></a>  Direccion</h7>
+          <p>Libertad 457, 6to piso, Ciudad Autonoma de Buenos Aires, Argentina. CP 1014.</p>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.183125026664!2d-58.38610508560926!3d-34.599530580460645!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccac7c2e1a54b%3A0x327c4296e870e09a!2sLibertad%20773%2C%20C1012AAO%20CABA!5e0!3m2!1sen!2sar!4v1621722815140!5m2!1sen!2sar" width="120" height="100" style="border:0;" allowfullscreen="" loading="lazy" class="map"></iframe>
         </div>
-        <div class="col-md-4 footer__item"> 
+        <div class="col-md-4 footer__item center-block text-center"> 
+          <p><a href="#" class="fa fa-phone"></a>  11-4435-6757</p>
+          <p><a href="#" class="fa fa-envelope"></a>  estudiofgcm@gmail.com</p>
           <p>Encontranos en las redes sociales</p>  
           <a href="#" class="fa fa-facebook"></a>
           <a href="#" class="fa fa-twitter"></a>
           <a href="#" class="fa fa-instagram"></a>
           <a href="#" class="fa fa-linkedin"></a>
-        </div>         
+        </div>                
       </footer>
       <p class="rights">© 2021 FG&CM. Todos los derechos reservados. Prohibida su reproducción total o parcial.</p>
 
-    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
-
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
-    -->
   </body>
 </html>
